best-practices/require-drop-cap-net-raw/.chainsaw-test/bad-pod-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: drop-capnetraw-bad01
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
  - name: add-capabilities-again
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: drop-capnetraw-bad02
spec:
  containers:
  - name: add-capabilities-again
    image: busybox:1.35
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
