best-practices/require-drop-cap-net-raw/.chainsaw-test/bad-pod-initcontainers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad-1
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: add-capabilities-bad-2
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
        drop:
          - CAP_NET_RAW
