best-practices/require-drop-cap-net-raw/.chainsaw-test/bad-podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dropall-baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: add-capabilities
        image: busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      - name: add-capabilities-again
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dropall-baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: add-capabilities
        image: busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
      - name: add-capabilities-again
        image: busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_TIME"]
            drop:
              - CAP_NET_RAW
