best-practices/require-drop-cap-net-raw/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: drop-capnetraw-good
spec:
  containers:
  - name: add-capabilities
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
  - name: add-capabilities-again
    image: ghcr.io/kyverno/test-busybox:1.35
    securityContext:
      capabilities:
        drop:
          - CAP_NET_RAW
